# remnashop

./: .env.example  .gitignore  CREDITS.md  Dockerfile  Dockerfile.local  Makefile  README.md  README.ru_RU.md  docker-compose.db.yml  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: __main__.py  lifespan.py
app/assets/locales/ru/: notifications.ftl  utils.ftl
app/bot/: commands.py  conditions.py  webhook.py
app/bot/filters/: __init__.py
app/bot/middlewares/: base.py  error.py  garbage.py  i18n.py  maintenance.py  throttling.py  user.py
app/bot/routers/: __init__.py
app/bot/routers/dashboard/: dialog.py  getters.py  handlers.py
app/bot/routers/extra/: __init__.py  errors.py  member.py  notification.py  test.py
app/bot/routers/menu/: dialog.py  (+2 more)
app/bot/services/: __init__.py  base.py  maintenance.py  notification.py  plan.py  user.py
app/bot/widgets/: banner.py  i18n_format.py
app/core/: cache_wrapper.py  config.py  constants.py  container.py  enums.py  i18n_keys.py  logger.py  storage_keys.py
app/core/utils/: adapter.py  formatters.py  time.py  types.py
app/db/: __init__.py  uow.py
app/db/migrations/: env.py
app/db/repositories/: __init__.py  base.py  general.py  plan.py  redis.py  user.py
app/endpoints/: __init__.py  telegram.py
app/factories/: __init__.py  container.py  dispatcher.py  fastapi.py  middlewares.py  redis.py  session_pool.py
assets/translations/ru/: buttons.ftl  messages.ftl  notifications.ftl  utils.ftl
src/bot/: keyboards.py  states.py
src/bot/middlewares/: garbage.py
src/core/: constants.py  enums.py
src/core/config/: app.py  database.py
src/core/utils/: formatters.py
src/infrastructure/payment_gateways/: __init__.py  base.py  yookassa.py  yoomoney.py
src/services/: broadcast.py  notification.py  payment_gateway.py  plan.py  pricing.py  promocode.py  referral.py  remnawave.py  settings.py  subscription.py  transaction.py  user.py
(+57 files in other folders)
